[package]
name = "omnicolor-rust"
version = "0.1.0"
authors = ["Eldritch Cheese <eldritch.cheese@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
png = "0.16.8"
indicatif = "0.15.0"
itertools = "0.10.0"
rand = "0.8.3"
clap = "2.33.3"