[package]
name = "omnicolor-rust"
version = "0.1.0"
authors = ["Eldritch Cheese <eldritch.cheese@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
png = "0.16.8"
itertools = "0.10.0"
rand = "0.8.3"
clap = "2.33.3"

# Latest indicatif version as of 2021-04-17 is 0.15.0, which doesn't
# have set_draw_rate.  Once 0.16.0 is out, should use it instead.
#indicatif = "0.16.0"
indicatif = { git = "https://github.com/mitsuhiko/indicatif", branch = "main" }