[package]
name = "omnicolor-rust"
version = "0.1.0"
authors = ["Eldritch Cheese <eldritch.cheese@gmail.com>"]
edition = "2018"

[profile.release]
debug = true

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
num-traits = "0.2"
png = "0.16.8"
itertools = "0.10.0"
rand = "0.8.3"
rand_chacha = "*"

# Uncertain if this belongs here or in dev-dependencies, but it's
# useful for some of the examples.
kurbo = "0.8.1"

# Latest indicatif version as of 2021-04-17 is 0.15.0, which doesn't
# have set_draw_rate.  Once 0.16.0 is out, should use it instead.
#indicatif = "0.16.0"
indicatif = { git = "https://github.com/mitsuhiko/indicatif", branch = "main" }

[dev-dependencies]
structopt = "0.3.21"
clap = "*"
criterion = {version = "0.3", features=['html_reports']}

roxmltree = "0.14.1"


# Version of clap 2.x.x with this PR
# https://github.com/clap-rs/clap/pull/2446
[patch.crates-io]
clap = { git = "https://github.com/Lunderberg/clap", branch = "v2-master" }
